--- a/RCCM/Views/Major/Edit.cshtml
+++ b/RCCM/Views/Major/Edit.cshtml
@@ -1,19 +1,31 @@
 ﻿@model UpdateMajorViewModel
+
 @{
     ViewData["Title"] = "Edit Major Data";
+    Layout = "_AdminLayout";
 }
 
-<h2>تحديث تخصص</h2>
-
-<form class=" " asp-action="EditMajor" method="post">
-    <div class="form-group">
-        <label asp-for="MajorName">اسم التخصص</label>
-        <input asp-for="MajorName" class="form-control form-text" value="@Model.MajorName" />
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow custom-card border-primary">
+                <div class="card-header bg-custom-primary text-white text-center">
+                    <h2>تحديث تخصص</h2>
+                </div>
+                <div class="card-body custom-card-body">
+                    <form asp-action="EditMajor" method="post">
+                        <div class="mb-3">
+                            <label asp-for="MajorName" class="form-label custom-form-label">اسم التخصص</label>
+                            <input asp-for="MajorName" class="form-control custom-form-control" value="@Model.MajorName" />
+                        </div>
+                        <input type="hidden" asp-for="MajorId" />
+                        <div class="d-flex justify-content-between mt-4">
+                            <button type="submit" class="btn btn-success">تحديث بيانات التخصص</button>
+                            <a class="btn btn-primary" asp-action="Index">العودة لقائمة التخصصات</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <input hidden asp-for="MajorId" />
-    <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-success">تحديث بيانات التخصص</button>
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة التخصصات</a>
-    </div>
-</form>
+</div>
