--- a/RCCM/Views/Nationality/Delete.cshtml
+++ b/RCCM/Views/Nationality/Delete.cshtml
@@ -1,16 +1,28 @@
 ﻿@model DeleteNationalityViewModel
 
-<h2>حذف الجنسية</h2>
+@{
+    Layout = "_AdminLayout";
+}
 
-<form asp-action="DeleteNationality" method="post">
-    <p><strong>اسم الجنسية:</strong> @Model.NationalityName</p>
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow custom-card border-danger">
+                <div class="card-header bg-custom-primary text-white text-center">
+                    <h2>حذف الجنسية</h2>
+                </div>
+                <div class="card-body custom-card-body">
+                    <form asp-action="DeleteNationality" method="post">
+                        <p><strong>اسم الجنسية:</strong> @Model.NationalityName</p>
+                        <input type="hidden" name="id" asp-for="NationalityId" />
 
-    <input type="hidden" name="id" asp-for="NationalityId" />
-
-    <div class="d-flex justify-content-evenly mt-5">
-
-        <button type="submit" class="btn btn-danger">حذف الجنسية</button>
-
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة الجنسيات</a>
+                        <div class="d-flex justify-content-between mt-5">
+                            <button type="submit" class="btn btn-danger">حذف الجنسية</button>
+                            <a class="btn btn-primary" asp-action="Index">العودة لقائمة الجنسيات</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-</form>
+</div>
