--- a/RCCM/Views/Nationality/Edit.cshtml
+++ b/RCCM/Views/Nationality/Edit.cshtml
@@ -1,20 +1,33 @@
 ﻿@model UpdateNationalityViewModel
+
 @{
-    ViewData["Title"] = "Edit User Data";
+    ViewData["Title"] = "تحديث الجنسية";
+    Layout = "_AdminLayout";
 }
 
-<h2>تحديث الجنسية</h2>
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow custom-card border-success">
+                <div class="card-header bg-custom-primary text-white text-center">
+                    <h2>تحديث الجنسية</h2>
+                </div>
+                <div class="card-body custom-card-body">
+                    <form asp-action="EditNationality" method="post">
+                        <div class="form-group mb-3">
+                            <label asp-for="NationalityName" class="form-label custom-form-label">اسم الجنسية</label>
+                            <input asp-for="NationalityName" class="form-control custom-form-control" value="@Model.NationalityName" />
+                        </div>
 
-<form class=" " asp-action="EditNationality" method="post">
-    <div class="form-group">
-        <label asp-for="NationalityName">اسم الجنسية</label>
-        <input asp-for="NationalityName" class="form-control form-text" value="@Model.NationalityName" />
+                        <input type="hidden" asp-for="NationalityId" />
+
+                        <div class="d-flex justify-content-between mt-5">
+                            <button type="submit" class="btn btn-success">تحديث الجنسية</button>
+                            <a class="btn btn-primary" asp-action="Index">العودة لقائمة الجنسيات</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-    </div>
-    <input hidden asp-for="NationalityId" />
-    <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-success">Nationality update</button>
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة الجنسيات</a>
-    </div>
-</form>
+</div>
