--- a/RCCM/Views/Request/Index.cshtml
+++ b/RCCM/Views/Request/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿
 @model List<RequestViewModel>
 
-
+@{
+    Layout = "_AdminLayout";
+}
 <div class="container">
     <table class="table table-hover table-striped">
         <thead class="bg-primary bg-opacity-75 text-black">
