--- a/RCCM/Views/Role/Add.cshtml
+++ b/RCCM/Views/Role/Add.cshtml
@@ -1,18 +1,36 @@
 ﻿@model AddRoleViewModel
 @{
     ViewData["Title"] = "Add Role";
+    Layout = "_AdminLayout";
 }
 
-<h2>إضافة مستخدم</h2>
+@section Scripts{
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
 
-<form asp-action="Add" method="post">
-    <div class="form-group">
-        <label asp-for="RoleName">اسم الصلاحية</label>
-        <input asp-for="RoleName" class="form-control form-text" />
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow custom-card border-primary">
+                <div class="card-header bg-custom-primary text-white text-center">
+                    <h2>إضافة صلاحية</h2>
+                </div>
+                <div class="card-body custom-card-body">
+                    <form asp-action="Add" method="post">
+                        <div class="mb-3">
+                            <label asp-for="RoleName" class="form-label custom-form-label">اسم الصلاحية</label>
+                            <input asp-for="RoleName" class="form-control custom-form-control" />
+                            <span asp-validation-for="RoleName" class="text-danger"></span>
+                        </div>
+                        <div class="d-flex justify-content-between mt-5">
+                            <button type="submit" class="btn btn-success">إضافة صلاحية</button>
+                            <a class="btn btn-primary" asp-action="Index">العودة لقائمة الصلاحيات</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-success">إضافة صلاحيات</button>
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة الصلاحيات</a>
-    </div>
-</form>
-
+</div>
