--- a/RCCM/Views/Shared/_AdminLayout.cshtml
+++ b/RCCM/Views/Shared/_AdminLayout.cshtml
@@ -13,46 +13,46 @@
 
 </head>
 <body>
-    <header>
-        <!-- User Nav Bar -->
-        <nav class="navbar navbar-expand-sm mb-3 bg user-navbar">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-                <img src="/LOGO.ico" width="270" height="75" alt="RCJY">
-            </a>
+
+            <!-- Admin Nav Bar -->
+            <nav class="navbar navbar-expand-sm mb-3 bg user-navbar">
+                <a class="navbar-brand" asp-area="" asp-controller="User" asp-action="Index">
+                    <img src="/LOGO.ico" width="270" height="75" alt="RCJY">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+                <div class="collapse navbar-collapse">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">الرئيسية</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="Index">المستخدمين</a>
                         </li>
                         <li class="nav-item border-start mx-2"></li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Recruitment" asp-action="RecruitIndex">التوظيف</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Role" asp-action="Index">الصلاحيات</a>
                         </li>
                         <li class="nav-item border-start mx-2"></li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Candidate" asp-action="CandidateIndex">المرشحين</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Candidate" asp-action="Index">المرشحين</a>
                         </li>
                         <li class="nav-item border-start mx-2"></li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Interview" asp-action="InterviewIndex">المقابلات الشخصيه</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Major" asp-action="Index">التخصصات</a>
                         </li>
-                
                         <li class="nav-item border-start mx-2"></li>
-                        
-                        <!-- Uesr to Admin Button -->
-                
                         <li class="nav-item">
-                         <a class="btn btn-secondary text-white float-left" asp-controller="User" asp-action="Index">Admin</a>
-
+                            <a class="nav-link text-white" asp-area="" asp-controller="Nationality" asp-action="Index">الجنسيات</a>
+                        </li>
+                        <li class="nav-item border-start mx-2"></li>
+                        <!-- Admin to User Button -->
+                        <li class="nav-item d-flex justify-content-end">
+                        <a class="btn btn-secondary text-white " asp-controller="home" asp-action="Index">User</a>
+                        </li>
                     </ul>
-                </nav>
-    </header>
-
-
-
+                </div>
+            </nav>
 
     <div class="bg-tiled">
         <div class="container-fluid">
