--- a/RCCM/Views/User/Add.cshtml
+++ b/RCCM/Views/User/Add.cshtml
@@ -1,23 +1,36 @@
 ﻿@model AddUserViewModel
+
 @{
     ViewData["Title"] = "Add User";
+    Layout = "_AdminLayout";
 }
-<h2>إضافة مستخدم</h2>
 
-<form asp-action="Add" method="post">
-    <div class="form-group">
-        <label asp-for="UserName">اسم المستخدم</label>
-        <input asp-for="UserName" class="form-control" />
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow custom-card border-primary">
+                <div class="card-header bg-custom-primary text-white text-center">
+                    <h2>إضافة مستخدم</h2>
+                </div>
+                <div class="card-body custom-card-body">
+                    <form asp-action="Add" method="post">
+                        <div class="mb-3">
+                            <label asp-for="UserName" class="form-label custom-form-label">اسم المستخدم</label>
+                            <input asp-for="UserName" class="form-control custom-form-control" />
+                        </div>
+
+                        <div class="mb-3">
+                            <label asp-for="RoleId" class="form-label custom-form-label">صلاحية المستخدم</label>
+                            <select asp-for="RoleId" class="form-control form-select" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName"))"></select>
+                        </div>
+
+                        <div class="d-flex justify-content-between mt-4">
+                            <button type="submit" class="btn btn-success">إضافة المستخدم</button>
+                            <a class="btn btn-primary" asp-action="Index">العودة لقائمة المستخدمين</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-
-    <div class="form-group">
-        <label asp-for="RoleId">صلاحية المستخدم</label>
-        <select asp-for="RoleId" class="form-control form-select" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName"))"></select>
-    </div>
-    <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-success">إضافة المستخدم</button>
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة المستخدمين</a>
-    </div>
-</form>
-
-
+</div>
