--- a/RCCM/Views/User/Delete.cshtml
+++ b/RCCM/Views/User/Delete.cshtml
@@ -1,15 +1,36 @@
 ﻿@model DeleteUserViewModel
 
-<h2>حذف المستخدم</h2>
+@{
+    Layout = "_AdminLayout";
+}
 
-<form asp-action="DeleteUser" method="post">
-    <p><strong>اسم المستخدم:</strong> @Model.UserName</p>
-    <p><strong>الصلاحية:</strong> @Model.RoleName</p>
-    <input type="hidden" asp-for="UserId" />
-    <input type="hidden" asp-for="UserName" />
-    <input type="hidden" asp-for="RoleId" />
-    <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-danger">حذف المستخدم</button>
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة المستخدمين</a>
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow custom-card border-primary">
+                <div class="card-header bg-custom-primary text-white text-center">
+                    <h2>حذف المستخدم</h2>
+                </div>
+                <div class="card-body custom-card-body">
+                    <form asp-action="DeleteUser" method="post">
+                        <div class="mb-3">
+                            <p><strong>اسم المستخدم:</strong> @Model.UserName</p>
+                        </div>
+                        <div class="mb-3">
+                            <p><strong>الصلاحية:</strong> @Model.RoleName</p>
+                        </div>
+
+                        <input type="hidden" asp-for="UserId" />
+                        <input type="hidden" asp-for="UserName" />
+                        <input type="hidden" asp-for="RoleId" />
+
+                        <div class="d-flex justify-content-between mt-4">
+                            <button type="submit" class="btn btn-danger">حذف المستخدم</button>
+                            <a class="btn btn-primary" asp-action="Index">العودة لقائمة المستخدمين</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-</form>
+</div>
