--- a/RCCM/Views/User/Edit.cshtml
+++ b/RCCM/Views/User/Edit.cshtml
@@ -1,22 +1,35 @@
 ﻿@model UpdateUserViewModel
+
 @{
     ViewData["Title"] = "Edit User Data";
+    Layout = "_AdminLayout";
 }
 
-<h2>تحديث مستخدم</h2>
-
-<form class=" " asp-action="EditUser" method="post">
-    <div class="form-group">
-        <label asp-for="UserName">اسم المستخدم</label>
-        <input asp-for="UserName" class="form-control form-text" value="@Model.UserName" />
+<div class="container mt-5 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card shadow custom-card border-primary">
+                <div class="card-header bg-custom-primary text-white text-center">
+                    <h2>تحديث مستخدم</h2>
+                </div>
+                <div class="card-body custom-card-body">
+                    <form asp-action="EditUser" method="post">
+                        <div class="mb-3">
+                            <label asp-for="UserName" class="form-label custom-form-label">اسم المستخدم</label>
+                            <input asp-for="UserName" class="form-control custom-form-control" value="@Model.UserName" />
+                        </div>
+                        <div class="mb-3">
+                            <label asp-for="RoleId" class="form-label custom-form-label">صلاحية المستخدم</label>
+                            <select asp-for="RoleId" class="form-control form-select" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName", Model.RoleId))"></select>
+                        </div>
+                        <input type="hidden" asp-for="UserId" />
+                        <div class="d-flex justify-content-between mt-5">
+                            <button type="submit" class="btn btn-success">تحديث بيانات المستخدم</button>
+                            <a class="btn btn-primary" asp-action="Index">العودة لقائمة المستخدمين</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label asp-for="RoleId">صلاحية المستخدم</label>
-        <select asp-for="RoleId" class="form-control form-select" asp-items="@(new SelectList(Model.Roles, "RoleId", "RoleName",Model.RoleId))"></select>
-    </div>
-    <input hidden asp-for="UserId" />
-    <div class="d-flex justify-content-evenly mt-5">
-        <button type="submit" class="btn btn-success">تحديث بيانات المستخدم</button>
-        <a class="text-decoration-none btn btn-primary" asp-action="Index">العودة لقائمة المستخدمين</a>
-    </div>
-</form>
+</div>
