Added Candidate popup window form

--- a/RCCM/Views/Candidate/Edit.cshtml
+++ b/RCCM/Views/Candidate/Edit.cshtml
@@ -24,7 +24,7 @@
                         </div>
 
                         <div class="mb-3">
-                            <label asp-for="DateOfBirth" class="form-label custom-form-label">تاريخ الميلاد</label>
+                            <label asp-for="DateOfBirth" name="DateOfBirth" class="form-label custom-form-label">تاريخ الميلاد</label>
                             <input asp-for="DateOfBirth" type="date" class="form-control custom-form-control" />
                         </div>
 
