--- a/RCCM/Views/Candidate/Delete.cshtml
+++ b/RCCM/Views/Candidate/Delete.cshtml
@@ -1,5 +1,7 @@
 ﻿@model DeleteCandidateViewModel
 
+<h2>حذف مرشح</h2>
+
 <form asp-action="DeleteCandidate" method="post">
     <div class="form-group">
         <label asp-for="CandidateName">اسم المرشح</label>
