Added Experience service.

--- a/RCCM/Views/Candidate/Index.cshtml
+++ b/RCCM/Views/Candidate/Index.cshtml
@@ -37,23 +37,23 @@
 
                     <td>
                         @{
-                            if (candidate.Request.RequestStatus == 0)
+                            if (candidate.Request?.RequestStatus == 0)
                             {
-                                <form asp-action="Add" class="form-control" asp-controller="Expeirence">
+                                <form class="form-control" method="post" asp-controller="Experience" asp-action="Add">
                                     <input hidden asp-for="@candidate.CandidateId" />
                                     <button type="submit" class="btn btn-primary">Exp</button>
                                 </form>
                             }
                             if (candidate.Request?.RequestStatus == 1)
                             {
-                                <form asp-action="Add" class="form-control" asp-controller="ExamTypeConf">
+                                <form asp-action="Add" class="form-control" method="post" asp-controller="ExamTypeConf">
                                     <input hidden asp-for="@candidate.CandidateId" />
                                     <button type="submit" class="btn btn-primary">Exam</button>
                                 </form>
                             }
                             if (candidate.Request?.RequestStatus == 2)
                             {
-                                <form asp-action="Add" class="form-control" asp-controller="Interview">
+                                <form asp-action="Add" class="form-control" method="post" asp-controller="Interview">
                                     <input hidden asp-for="@candidate.CandidateId" />
                                     <button type="submit" class="btn btn-primary">Interview</button>
                                 </form>
