--- a/RCCM/Views/_ViewImports.cshtml
+++ b/RCCM/Views/_ViewImports.cshtml
@@ -9,4 +9,5 @@
 @using Core.Entities.ViewModel.ExamTypeConf;
 @using Core.Entities.ViewModel.ExamResult;
 @using Core.Entities.ViewModel.Interview;
+@using Core.Entities.ViewModel.Experience;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
