--- a/RCCM/Views/Experience/Add.cshtml
+++ b/RCCM/Views/Experience/Add.cshtml
@@ -2,8 +2,8 @@
 
 <form asp-action="AddExp" method="post">
     <div>
-        <label asp-for="Candidate.CandidateName"> Candidate Name</label>
-        <input asp-for="Candidate.CandidateName" readonly>
+        <label asp-for="Candidate.CandidateName"> </label>
+        @Model.Candidate.CandidateName
     </div>
 
      <div>
